finish updates for UI simple example project